--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/f208aa77be.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
     <h1>Hello World</h1>
-    <h2>Nice to be here</h2>
+    <h2>Nice to be here <i class="fa-sharp fa-solid fa-user"></i></h2>
 </body>
 </html>
