added homepage content design

--- a/index.html
+++ b/index.html
@@ -21,13 +21,25 @@ crossorigin="anonymous"
 ></script>
     <title>Document</title>
 </head>
-<body>
+<body class="bg-dark">
    <div class="hero d-flex flex-column align-items-center justify-content-center">
     <h2 class="fs-3 fw-light text-white">Anika Jane</h2>
-    <h1 class="text-uppercase fw-bolder fsize-1 text-white">Photography</h1>
+    <h1 class="text-uppercase fw-bolder fsize-1 text-white d-none d-sm-block">Photography</h1>
     <h3 class="fs-5 fw-light text-white">can I take pictures of your plants?</h3>
     <a href="#" class="btn btn-dark mt-5 shadow-lg rounded">contact me</a>
    </div>
     
+<div class="container bg-dark image-gallery mt-5" style="width: 1000px;">
+    <img src="images/hoya-1.png" alt="hoya" class="flower-img">
+    <img src="images/hoya-2.png" alt="hoya" class="flower-img">
+    <img src="images/peony-1.png" alt="hoya" class="flower-img">
+    <img src="images/peony-2.png" alt="hoya" class="flower-img">
+    <img src="images/wedding-1.png" alt="hoya" class="flower-img">
+    <img src="images/wedding-2.png" alt="hoya" class="flower-img">
+    <img src="images/wedding-3.png" alt="hoya" class="flower-img">
+    <img src="images/wedding-4.png" alt="hoya" class="flower-img">
+    <img src="images/hoya-1.png" alt="hoya" class="flower-img">
+</div>
+
 </body>
 </html>
