--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@ crossorigin="anonymous"
     <img src="images/wedding-4.png" alt="hoya" class="flower-img">
     <img src="images/hoya-1.png" alt="hoya" class="flower-img">
 </div>
+<footer>
+    
+</footer>
 
 </body>
 </html>
