Added the rest of the pages and content. linked everything together

--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,7 @@ crossorigin="anonymous"
                 <a class="nav-link" href="about.html#contact" title="Navigation Contact Me Button">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="intouch.html" title="Navigation Contact Me Button">Contact me</a>
+                <a class="nav-link" href="about.html#contact" title="Navigation Contact Me Button">Contact me</a>
               </li>
             </ul>
           </div>
@@ -58,11 +58,8 @@ crossorigin="anonymous"
       </nav>
 
 
-   <div class="hero d-flex flex-column align-items-center justify-content-center">
-    <h2 class="fs-3 fw-light text-white">Anika Jane</h2>
-    <h1 class="text-uppercase fw-bolder fsize-1 text-white d-none d-sm-block">Photography</h1>
-    <h3 class="fs-5 fw-light text-white">can I take pictures of your plants?</h3>
-    <a href="about.html#contact" class="btn btn-dark mt-5 shadow-lg rounded">contact me</a>
+   <div class="d-flex flex-column align-items-center justify-content-center">
+       <h1 class="text-uppercase fw-bolder fsize-1 text-white  d-none d-sm-block header">Gallery</h1>
    </div>
     
 <div class="container bg-dark image-gallery mt-5" style="width: 1000px;">
@@ -76,13 +73,16 @@ crossorigin="anonymous"
     <img src="images/wedding-4.png" alt="hoya" class="flower-img">
     <img src="images/hoya-1.png" alt="hoya" class="flower-img">
 </div>
+
+
 <footer class="d-flex justify-content-around">
     <p class="text-white mt-2">Anika Jane</p>
-    <div class="icons mt-2">
+    <div class="icons mt25">
         <a href="#" class="me-3 text-white"><i class="fa-brands fa-facebook"></i></a>
     <a href="https://www.instagram.com/kaka_khan/" class="me-3 text-white"><i class="fa-brands fa-instagram"></i></a>
     <a href="#" class="me-3 text-white"><i class="fa-brands fa-linkedin"></i></a>
     </div>
     <p class="text-white mt-2">© Anika Jane 2023</p>
+</footer>
 </body>
 </html>
