--- a/intouch.html
+++ b/intouch.html
@@ -50,7 +50,7 @@ crossorigin="anonymous"
                 <a class="nav-link" href="about.html#contact" title="Navigation Contact Me Button">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="intouch.html" title="Navigation Contact Me Button">Contact me</a>
+                <a class="nav-link" href="about.html#contact" title="Navigation Contact Me Button">Contact me</a>
               </li>
             </ul>
           </div>
@@ -58,24 +58,18 @@ crossorigin="anonymous"
       </nav>
 
 
-   <div class="hero d-flex flex-column align-items-center justify-content-center">
-    <h2 class="fs-3 fw-light text-white">Anika Jane</h2>
-    <h1 class="text-uppercase fw-bolder fsize-1 text-white d-none d-sm-block">Photography</h1>
-    <h3 class="fs-5 fw-light text-white">can I take pictures of your plants?</h3>
-    <a href="about.html#contact" class="btn btn-dark mt-5 shadow-lg rounded">contact me</a>
+   <div class="d-flex flex-column align-items-center justify-content-center header">
+
+    <h1 class="text-uppercase fw-bolder fsize-1 text-white d-none d-sm-block">Anika Jane</h1>
+    <h3 class="fs-5 fw-light text-danger text-uppercase mt-5">Address</h3>
+    <p class="text-white">1234 West Boulevard, Waterloo</p>
+    <h3 class="fs-5 fw-light text-danger text-uppercase mt-5">email</h3>
+    <p class="text-white">anikamaudejane@gmail.com</p>
+    <h3 class="fs-5 fw-light text-danger text-uppercase mt-5">phone</h3>
+    <p class="text-white">545 870 9843</p>
    </div>
     
-<div class="container bg-dark image-gallery mt-5" style="width: 1000px;">
-    <img src="images/hoya-1.png" alt="hoya" class="flower-img">
-    <img src="images/hoya-2.png" alt="hoya" class="flower-img">
-    <img src="images/peony-1.png" alt="hoya" class="flower-img">
-    <img src="images/peony-2.png" alt="hoya" class="flower-img">
-    <img src="images/wedding-1.png" alt="hoya" class="flower-img">
-    <img src="images/wedding-2.png" alt="hoya" class="flower-img">
-    <img src="images/wedding-3.png" alt="hoya" class="flower-img">
-    <img src="images/wedding-4.png" alt="hoya" class="flower-img">
-    <img src="images/hoya-1.png" alt="hoya" class="flower-img">
-</div>
+
 <footer class="d-flex justify-content-around">
     <p class="text-white mt-2">Anika Jane</p>
     <div class="icons mt-2">
