updated the contact me link

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ crossorigin="anonymous"
     <h2 class="fs-3 fw-light text-white">Anika Jane</h2>
     <h1 class="text-uppercase fw-bolder fsize-1 text-white d-none d-sm-block">Photography</h1>
     <h3 class="fs-5 fw-light text-white">can I take pictures of your plants?</h3>
-    <a href="about.html#contact" class="btn btn-dark mt-5 shadow-lg rounded">contact me</a>
+    <a href="intouch.html" class="btn btn-dark mt-5 shadow-lg rounded">contact me</a>
    </div>
     
 <div class="container bg-dark image-gallery mt-5" style="width: 1000px;">
