--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@ crossorigin="anonymous"
                 <a class="nav-link" href="gallery.html" title="Navigation Gallery Button">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html#contact" title="Navigation Contact Me Button">Contact me</a>
+                <a class="nav-link" href="intouch.html" title="Navigation Contact Me Button">Contact me</a>
               </li>
             </ul>
           </div>
