uodated site SEO

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is a website designed to show the work of Anika Jane a floral photographer">
     <link rel="stylesheet" href="src/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,15 +62,15 @@ crossorigin="anonymous"
     <div class="container header">
         <div class="row">
             <div class="col-sm-6">
-                <img src="images/self.jpeg" alt="picture of Anika Jane" class="selfie-image mt-5 img-fluid " >
+                <img src="images/self.jpeg" alt="picture of Anika Jane" class="selfie-image mt-5 img-fluid" title="picture of Anika Jane" >
             </div>
             <div class="col-sm-6">
                 <p class="text-uppercase text-danger mt-5">About me</p>
                 <h1 class="text-uppercase text-white">Anika Jane</h1>
                 <h3 class="fs-6 fw-lighter text-white">I am a floral photographer based in waterloo, ontario. I enjoy taking photos of all different kinds of flowers, trying to enhance thier beauty and mystery with natural light.</h3>
-                <a href="#" class="me-3 text-white"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://www.instagram.com/kaka_khan/" class="me-3 text-white"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" class="me-3 text-white"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#" class="me-3 text-white"><i class="fa-brands fa-facebook" title="link to Anika Jane's Facebook"></i></a>
+                <a href="https://www.instagram.com/kaka_khan/" class="me-3 text-white" title="link to Anika Jane's Instagram"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#" class="me-3 text-white" title="link to Anika Jane's linkedin"><i class="fa-brands fa-linkedin"></i></a>
                 <p class="text-uppercase text-danger mt-5">my camera</p>
                 <i class="fa-solid fa-camera text-white me-3"></i><span class="text-white">Iphone 13 Pro</span>
                 <br>
@@ -82,23 +83,23 @@ crossorigin="anonymous"
     <div class="container bg-dark image-gallery mt-5" style="width: 1000px;">
         <div class="row">
             <div class="col-sm-4">
-                <img src="images/hoya-1.png" alt="hoya" class="flower-img img-fluid d-none d-sm-block">
+                <img src="images/hoya-1.png" alt="hoya plant in bloom" class="flower-img img-fluid d-none d-sm-block">
             </div>
             <div class="col-sm-4">
-                <img src="images/hoya-2.png" alt="hoya" class="flower-img img-fluid d-none d-sm-block">
+                <img src="images/hoya-2.png" alt="hoya plant in bloom" class="flower-img img-fluid d-none d-sm-block">
             </div>
             <div class="col-sm-4 justify-content-center">
-                <img src="images/peony-1.png" alt="hoya" class="flower-img img-fluid d-none d-sm-block">
+                <img src="images/peony-1.png" alt="peony flower" class="flower-img img-fluid d-none d-sm-block">
             </div>           
         </div>
     </div>
     <footer class="d-flex justify-content-around">
-        <p class="text-white mt-2">Anika Jane</p>
-        <div class="icons mt-2">
-            <a href="#" class="me-3 text-white"><i class="fa-brands fa-facebook"></i></a>
-        <a href="https://www.instagram.com/kaka_khan/" class="me-3 text-white"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#" class="me-3 text-white"><i class="fa-brands fa-linkedin"></i></a>
+        <p class="text-white mt-5">Anika Jane</p>
+        <div class="icons mt-5">
+            <a href="#" class="me-3 text-white"><i class="fa-brands fa-facebook" title="link to Anika Jane's Facebook"></i></a>
+        <a href="https://www.instagram.com/kaka_khan/" class="me-3 text-white" title="link to Anika Jane's instagram"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#" class="me-3 text-white"><i class="fa-brands fa-linkedin" title="link to Anika Jane's linkedin"></i></a>
         </div>
-        <p class="text-white mt-2">© Anika Jane 2023</p>
+        <p class="text-white mt-5">© Anika Jane 2023</p>
 </body>
 </html>
