--- a/intouch.html
+++ b/intouch.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is a website designed to show the work of Anika Jane a floral photographer">
     <link rel="stylesheet" href="src/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +21,7 @@ integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOn
 crossorigin="anonymous"
 ></script>
 <script src="https://kit.fontawesome.com/f208aa77be.js" crossorigin="anonymous"></script>
-    <title>Anika Jane Photography</title>
+    <title>Get in touch with Anika Jane</title>
 </head>
 <body class="bg-dark">
 
@@ -71,12 +72,12 @@ crossorigin="anonymous"
     
 
 <footer class="d-flex justify-content-around">
-    <p class="text-white mt-2">Anika Jane</p>
-    <div class="icons mt-2">
+    <p class="text-white mt-5">Anika Jane</p>
+    <div class="icons mt-5">
         <a href="#" class="me-3 text-white"><i class="fa-brands fa-facebook"></i></a>
     <a href="https://www.instagram.com/kaka_khan/" class="me-3 text-white"><i class="fa-brands fa-instagram"></i></a>
     <a href="#" class="me-3 text-white"><i class="fa-brands fa-linkedin"></i></a>
     </div>
-    <p class="text-white mt-2">© Anika Jane 2023</p>
+    <p class="text-white mt-5">© Anika Jane 2023</p>
 </body>
 </html>
