--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is a website designed to show the work of Anika Jane a floral photographer">
     <link rel="stylesheet" href="src/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +21,7 @@ integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOn
 crossorigin="anonymous"
 ></script>
 <script src="https://kit.fontawesome.com/f208aa77be.js" crossorigin="anonymous"></script>
-    <title>Anika Jane Photography</title>
+    <title>Anika Jane Photography Gallery</title>
 </head>
 <body class="bg-dark">
 
@@ -63,26 +64,26 @@ crossorigin="anonymous"
    </div>
     
 <div class="container bg-dark image-gallery mt-5" style="width: 1000px;">
-    <img src="images/hoya-1.png" alt="hoya" class="flower-img">
-    <img src="images/hoya-2.png" alt="hoya" class="flower-img">
-    <img src="images/peony-1.png" alt="hoya" class="flower-img">
-    <img src="images/peony-2.png" alt="hoya" class="flower-img">
-    <img src="images/wedding-1.png" alt="hoya" class="flower-img">
-    <img src="images/wedding-2.png" alt="hoya" class="flower-img">
-    <img src="images/wedding-3.png" alt="hoya" class="flower-img">
-    <img src="images/wedding-4.png" alt="hoya" class="flower-img">
-    <img src="images/hoya-1.png" alt="hoya" class="flower-img">
+    <img src="images/hoya-1.png" alt="hoya plant in bloom" class="flower-img">
+    <img src="images/hoya-2.png" alt="hoya plant in bloom" class="flower-img">
+    <img src="images/peony-1.png" alt="blooming peony flower" class="flower-img">
+    <img src="images/peony-2.png" alt="blooming peony flower" class="flower-img">
+    <img src="images/wedding-1.png" alt="wedding flower" class="flower-img">
+    <img src="images/wedding-2.png" alt="wedding flower" class="flower-img">
+    <img src="images/wedding-3.png" alt="wedding flower" class="flower-img">
+    <img src="images/wedding-4.png" alt="wedding flower" class="flower-img">
+    <img src="images/hoya-1.png" alt="hoya plant in bloom" class="flower-img">
 </div>
 
 
 <footer class="d-flex justify-content-around">
-    <p class="text-white mt-2">Anika Jane</p>
-    <div class="icons mt25">
-        <a href="#" class="me-3 text-white"><i class="fa-brands fa-facebook"></i></a>
-    <a href="https://www.instagram.com/kaka_khan/" class="me-3 text-white"><i class="fa-brands fa-instagram"></i></a>
-    <a href="#" class="me-3 text-white"><i class="fa-brands fa-linkedin"></i></a>
+    <p class="text-white mt-5">Anika Jane</p>
+    <div class="icons mt-5">
+        <a href="#" class="me-3 text-white"><i class="fa-brands fa-facebook" title="link to anika janes's facebook"></i></a>
+    <a href="https://www.instagram.com/kaka_khan/" class="me-3 text-white" title="link to anika janes's instagram"><i class="fa-brands fa-instagram"></i></a>
+    <a href="#" class="me-3 text-white"><i class="fa-brands fa-linkedin" title="link to anika janes's linkedin"></i></a>
     </div>
-    <p class="text-white mt-2">© Anika Jane 2023</p>
+    <p class="text-white mt-5">© Anika Jane 2023</p>
 </footer>
 </body>
 </html>
