--- a/about.html
+++ b/about.html
@@ -94,12 +94,13 @@ crossorigin="anonymous"
         </div>
     </div>
     <footer class="d-flex justify-content-around">
-        <p class="text-white mt-5">Anika Jane</p>
-        <div class="icons mt-5">
-            <a href="#" class="me-3 text-white"><i class="fa-brands fa-facebook" title="link to Anika Jane's Facebook"></i></a>
-        <a href="https://www.instagram.com/kaka_khan/" class="me-3 text-white" title="link to Anika Jane's instagram"><i class="fa-brands fa-instagram"></i></a>
+        <p class="text-white mt-3">Anika Jane</p>
+        <div class="icons mt-3">
+            <a href="#" class="me-3 text-white" title="link to Anika Jane's Facebook"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.instagram.com/kaka_khan/" class="me-3 text-white" title="link to Anika Jane's Instagram"><i class="fa-brands fa-instagram"></i></a>
         <a href="#" class="me-3 text-white"><i class="fa-brands fa-linkedin" title="link to Anika Jane's linkedin"></i></a>
         </div>
-        <p class="text-white mt-5">© Anika Jane 2023</p>
+        <p class="text-white mt-3">© Anika Jane 2023</p>
+        </footer>
 </body>
 </html>
