updated github links in footer

--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@ crossorigin="anonymous"
     <div class="icons mt-3">
         <a href="#" class="me-3 text-white" title="link to Anika Jane's Facebook"><i class="fa-brands fa-facebook"></i></a>
     <a href="https://www.instagram.com/kaka_khan/" class="me-3 text-white" title="link to Anika Jane's Instagram"><i class="fa-brands fa-instagram"></i></a>
-    <a href="#" class="me-3 text-white"><i class="fa-brands fa-linkedin" title="link to Anika Jane's linkedin"></i></a>
+    <a href="https://github.com/anika-jane/portfolio-project" class="me-3 text-white" title="link to Anika Jane's Github"><i class="fa-brands fa-github"></i></a>
     </div>
     <p class="text-white mt-3">© Anika Jane 2023</p>
     </footer>
