--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@ crossorigin="anonymous"
     <a href="https://www.instagram.com/kaka_khan/" class="me-3 text-white" title="link to Anika Jane's Instagram"><i class="fa-brands fa-instagram"></i></a>
     <a href="https://github.com/anika-jane/portfolio-project" class="me-3 text-white" title="link to Anika Jane's Github"><i class="fa-brands fa-github"></i></a>
     </div>
-    <p class="text-white mt-3">© Anika Jane 2023</p>
+    <p class="text-white mt-3">© Anika Jane '23</p>
+
     </footer>
 </body>
 </html>
