fixed the responsive aspect to the image gallery

--- a/gallery.html
+++ b/gallery.html
@@ -63,16 +63,16 @@ crossorigin="anonymous"
        <h1 class="text-uppercase fw-bolder fsize-1 text-white  d-none d-sm-block header">Gallery</h1>
    </div>
     
-<div class="container bg-dark image-gallery mt-5" style="width: 1000px;">
-    <img src="images/hoya-1.png" alt="hoya plant in bloom" class="flower-img">
-    <img src="images/hoya-2.png" alt="hoya plant in bloom" class="flower-img">
-    <img src="images/peony-1.png" alt="blooming peony flower" class="flower-img">
-    <img src="images/peony-2.png" alt="blooming peony flower" class="flower-img">
-    <img src="images/wedding-1.png" alt="wedding flower" class="flower-img">
-    <img src="images/wedding-2.png" alt="wedding flower" class="flower-img">
-    <img src="images/wedding-3.png" alt="wedding flower" class="flower-img">
-    <img src="images/wedding-4.png" alt="wedding flower" class="flower-img">
-    <img src="images/hoya-1.png" alt="hoya plant in bloom" class="flower-img">
+   <div class="container bg-dark image-gallery mt-5">
+    <div class="box"><img src="images/hoya-1.png" alt="hoya plant in bloom" class="flower-img"></div>
+    <div class="box"><img src="images/hoya-2.png" alt="hoya plant in bloom" class="flower-img"></div>
+    <div class="box"><img src="images/peony-1.png" alt="peony in bloom" class="flower-img"></div>
+    <div class="box"><img src="images/peony-2.png" alt="peony in bloom" class="flower-img"></div>
+    <div class="box"> <img src="images/wedding-1.png" alt="wedding flowers" class="flower-img"></div>
+    <div class="box"><img src="images/wedding-2.png" alt="wedding flowers" class="flower-img"></div>
+    <div class="box"> <img src="images/wedding-3.png" alt="wedding flowers" class="flower-img"></div>
+    <div class="box">  <img src="images/wedding-4.png" alt="wedding flowers" class="flower-img"></div>
+    <div class="box"> <img src="images/hoya-1.png" alt="hoya plant in bloom" class="flower-img"></div>
 </div>
 
 
