--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@ crossorigin="anonymous"
     <a href="intouch.html" class="btn btn-dark mt-5 shadow-lg rounded">contact me</a>
    </div>
     
-<div class="container bg-dark image-gallery mt-5" style="width: 1000px;">
-    <img src="images/hoya-1.png" alt="hoya plant in bloom" class="flower-img">
-    <img src="images/hoya-2.png" alt="hoya plant in bloom" class="flower-img">
-    <img src="images/peony-1.png" alt="peony in bloom" class="flower-img">
-    <img src="images/peony-2.png" alt="peony in bloom" class="flower-img">
-    <img src="images/wedding-1.png" alt="wedding flowers" class="flower-img">
-    <img src="images/wedding-2.png" alt="wedding flowers" class="flower-img">
-    <img src="images/wedding-3.png" alt="wedding flowers" class="flower-img">
-    <img src="images/wedding-4.png" alt="wedding flowers" class="flower-img">
-    <img src="images/hoya-1.png" alt="hoya plant in bloom" class="flower-img">
+<div class="container bg-dark image-gallery mt-5">
+    <div class="box"><img src="images/hoya-1.png" alt="hoya plant in bloom" class="flower-img"></div>
+    <div class="box"><img src="images/hoya-2.png" alt="hoya plant in bloom" class="flower-img"></div>
+    <div class="box"><img src="images/peony-1.png" alt="peony in bloom" class="flower-img"></div>
+    <div class="box"><img src="images/peony-2.png" alt="peony in bloom" class="flower-img"></div>
+    <div class="box"> <img src="images/wedding-1.png" alt="wedding flowers" class="flower-img"></div>
+    <div class="box"><img src="images/wedding-2.png" alt="wedding flowers" class="flower-img"></div>
+    <div class="box"> <img src="images/wedding-3.png" alt="wedding flowers" class="flower-img"></div>
+    <div class="box">  <img src="images/wedding-4.png" alt="wedding flowers" class="flower-img"></div>
+    <div class="box"> <img src="images/hoya-1.png" alt="hoya plant in bloom" class="flower-img"></div>
 </div>
 <footer class="d-flex justify-content-around">
     <p class="text-white mt-3">Anika Jane</p>
