--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@ crossorigin="anonymous"
                 <p class="text-uppercase text-danger mt-5">my camera</p>
                 <i class="fa-solid fa-camera text-white me-3"></i><span class="text-white">Iphone 13 Pro</span>
                 <br>
-                <div id="contact"><a href="intouch.html" class=" d-inline-flex btn btn-light mt-5 shadow-lg rounded mt-5 ">contact me</a></div>
+                <div id="contact"><a href="intouch.html" class=" d-inline-flex btn btn-light mt-5 shadow-lg rounded mt-5 mb-5">contact me</a></div>
                 
             </div>
         </div>
